# DocuPilot

./: .gitignore  DocuPilot.slnx  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yml  pull-request.yml
docs/: docfx.json  toc.yml
docuPilot/: app.py  main.py
docuPilot/ui/: MainWindow.py
docuPilot/ui/widgets/: DeviceSelectorWidget.py  DeviceTileWidget.py  MicrophoneSelectorWidget.py  MicrophoneTileWidget.py  RecordButtonWidget.py  ScreenSelectorWidget.py  ScreenTileWidget.py
docupilot/: __main__.py  app.py
docupilot/ui/: MainWindow.py
docupilot/ui/widgets/: MicrophoneSelectorWidget.py  MicrophoneTileWidget.py  ScreenSelectorWidget.py  ScreenTileWidget.py
src/DocuPilot/: App.axaml  App.axaml.cs  DocuPilot.csproj  Program.cs  app.manifest  app.py  main.py
src/DocuPilot/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
src/DocuPilot/Views/: MainWindow.axaml  MainWindow.axaml.cs
