[project]
name = "DocuPilot"
version = "0.0.1"
description = "Records the screen, audio and input events to create user manuals"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<0.16"
]

[project.scripts]
docupilot = "docupilot.main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100