[project]
name = "DocuPilot"
version = "0.0.1"
description = "Records the screen, audio and input events to create user manuals"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pyside6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<0.16"
]

[project.scripts]
docupilot = "docupilot.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100